--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
