--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,11 +1,11 @@
-# Use an official Node.js runtime as the base image
+# Use an official Node.js runtime as a parent image
 FROM node:18
 
-# Set the working directory
-WORKDIR /usr/src/app
+# Set the working directory in the container
+WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# Copy package.json and package-lock.json for npm install
+COPY package.json package-lock.json ./
 
 # Install dependencies
 RUN npm install
@@ -13,8 +13,11 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
-# Expose the port the app runs on
-EXPOSE 5000
+# Install nodemon globally for development
+RUN npm install -g nodemon
 
-# Start the application
-CMD ["npm", "start"]
+# Expose the application port
+EXPOSE 3000
+
+# Command to run the app using nodemon
+CMD ["npx", "nodemon", "server.js"]
