--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "run tests",
-    "start": "nodemon server.js -e ejs,js,css,html,jpg,png,scss"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "pg": "^8.13.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "node server.js",
+        "dev": "nodemon server.js"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "pg": "^8.13.1",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.37.5",
+        "sequelize-cli": "^6.6.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.22"
+    }
 }
