--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,30 +1,24 @@
-# Stage 1: Build the React app
-FROM node:18 AS build
+# Frontend Dockerfile
+FROM node:18 as build
 
-# Set the working directory
+# Set working directory
 WORKDIR /usr/src/app
 
-# Install dependencies
+# Copy package.json and package-lock.json
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
 
-# Copy the rest of the application code
-COPY . ./
-
-# Build the React app for production
+# Copy source code and build the app
+COPY . .
 RUN npm run build
 
-# Stage 2: Serve with Nginx
+# Serve the application with a lightweight server
 FROM nginx:alpine
-
-# Copy the build folder to Nginx's default serving directory
 COPY --from=build /usr/src/app/build /usr/share/nginx/html
 
-# Copy the custom Nginx configuration file
-COPY nginx/nginx.conf /etc/nginx/nginx.conf
-
-# Expose port 80 to serve the app
+# Expose port 80
 EXPOSE 80
 
-# Start Nginx in the foreground
 CMD ["nginx", "-g", "daemon off;"]
