--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,24 +1,20 @@
-# Frontend Dockerfile
-FROM node:18 as build
+# Use the official Node.js image
+FROM node:20
 
-# Set working directory
-WORKDIR /usr/src/app
+# Set the working directory inside the container
+WORKDIR /app/frontend
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# Copy package.json and package-lock.json to the container
+COPY package.json package-lock.json ./
 
-# Install dependencies
-RUN npm install
+# Install frontend dependencies
+RUN npm install --legacy-peer-deps
 
-# Copy source code and build the app
+# Copy the rest of the frontend code
 COPY . .
-RUN npm run build
 
-# Serve the application with a lightweight server
-FROM nginx:alpine
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
+# Expose the frontend development server port
+EXPOSE 3000
 
-# Expose port 80
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+# Command to run the React development server
+CMD ["npm", "start"]
