--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,10 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.18.2",
+        "multer": "^1.4.5-lts.1",
         "pg": "^8.13.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.5",
