--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.2"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "sequelize-cli": "^6.6.2",
+    "webpack-dev-server": "^5.2.0"
   }
 }
