backend-frontend config for login and register

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -3,21 +3,22 @@
     "username": "postgres",
     "password": "1234",
     "database": "sentimentanalysis",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "host": "localhost",
+    "dialect": "postgres",
+     "logging": "console.log" 
   },
   "test": {
     "username": "postgres",
     "password": "1234",
     "database": "sentimentanalysis",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
     "password": "1234",
     "database": "sentimentanalysis",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "postgres"
   }
 }
