--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,6 +1,6 @@
 # Use an official Node.js runtime as a parent image
 FROM node:18
-
+RUN apt-get update && apt-get install -y iputils-ping telnet
 # Set the working directory in the container
 WORKDIR /app
 
@@ -8,7 +8,8 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm install --legacy-peer-deps
+
 
 # Copy the rest of the application code
 COPY . .
@@ -17,7 +18,7 @@ COPY . .
 RUN npm install -g nodemon
 
 # Expose the application port
-EXPOSE 3000
+EXPOSE 5001
 
 # Command to run the app using nodemon
 CMD ["npx", "nodemon", "server.js"]
