--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,16 @@
     "name": "backend",
     "version": "1.0.0",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "start": "nodemon server.js",
+        "dev": "nodemon server.js",
+        "migrate": "sequelize-cli db:migrate"
     },
     "dependencies": {
-        "dotenv": "^16.0.3",
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "pg": "^8.13.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.5",
