--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
-version: "3.8"
 services:
   backend:
     build:
       context: ./backend
     ports:
       - "5000:5000"
-    command: ["npx", "nodemon", "src/server.js"]  # Run your app using nodemon
+    command: ["npx", "nodemon", "src/server.js"]  
     environment:
       DB_USER: postgres
       DB_PASSWORD: 1234
       DB_NAME: sentimentanalysis
-      DB_HOST: db
+      DB_HOST: db 
       DB_PORT: 5432
+      JWT_SECRET: 22edf3d4a66af7bd557807602467e21026c7bbbdd630264477691c350e54d048ffc653b53873c8f06a9f492e3e9f15ed8ea22cd369104f9843aec75a87320d11
     depends_on:
       - db
     networks:
-      - sentiment_analysis
+      - sentiment-analysis_sentiment_analysis
 
   frontend:
     build:
@@ -23,7 +23,7 @@ services:
     ports:
       - "3000:80"
     networks:
-      - sentiment_analysis
+      - sentiment-analysis_sentiment_analysis
 
   db:
     image: postgres:13
@@ -35,10 +35,10 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - sentiment_analysis
+      - sentiment-analysis_sentiment_analysis
 
 volumes:
   postgres_data:
 networks:
-  sentiment_analysis:
+  sentiment-analysis_sentiment_analysis:
     driver: bridge
