--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,12 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "date-fns": "^4.1.0",
-    "react": "^17.0.2",
+    "react": "^19.0.0",
     "react-bootstrap": "^2.2.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^19.0.0",
     "react-github-calendar": "^3.2.2",
     "react-icons": "^4.12.0",
+    "react-jsx-runtime": "^1.0.0-alpha.1",
     "react-parallax-tilt": "^1.7.42",
     "react-pdf": "^5.7.1",
     "react-router-dom": "^6.28.0",
@@ -49,5 +50,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+   "proxy": "http://localhost:5000"
 }
