fix and finished CRUD backend and frontend for contact us and notifications

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -3,7 +3,7 @@
     "username": "postgres",
     "password": "1234",
     "database": "sentimentanalysis",
-    "host": "localhost",
+    "host": "db",
     "dialect": "postgres",
      "logging": "console.log" 
   },
@@ -11,14 +11,14 @@
     "username": "postgres",
     "password": "1234",
     "database": "sentimentanalysis",
-    "host": "localhost",
+    "host": "db",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
     "password": "1234",
     "database": "sentimentanalysis",
-    "host": "localhost",
+    "host": "db",
     "dialect": "postgres"
   }
 }
