--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
