--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,10 @@
         "pg": "^8.13.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.5",
-        "sequelize-cli": "^6.6.2"
+        "sequelize-cli": "^6.6.2",
+        "ws": "^8.18.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.22"
+        "nodemon": "^3.1.9"
     }
 }
