solved some errors with docker

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -10,16 +10,14 @@ COPY package.json package-lock.json ./
 # Install backend dependencies
 RUN npm install --legacy-peer-deps
 
-RUN npm install -g nodemon  # Install nodemon globally for hot reloading
+# Install nodemon globally for hot reloading
+RUN npm install -g nodemon  
 
 # Copy the rest of the backend code
 COPY . .
 
-# Install nodemon globally for development
-RUN npm install -g nodemon
-
 # Expose the application port
-EXPOSE 5001
+EXPOSE 5000
 
 # Command to run the app with nodemon
 CMD ["npx", "nodemon", "src/server.js"]
