--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,14 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - sentiment-analysis_sentiment_analysis
-
+# logging:
+#   driver: json-file
+#   options:
+#     labels: "logging"
+#     env: "logging"
+#     compress: "true"
+#     max-size: "10m"
+#     max-file: "3"
 volumes:
   postgres_data:
 
